--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "keywords": [],
   "dependencies": {
     "axios": "^1.12.2",
+    "compression": "^1.8.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "ioredis": "^5.8.1",
     "pg": "^8.16.3"
   }
