--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "hotel reservation plateform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "smoke:multicomplete": "node test/multicomplete.smoke.js"
   },
   "author": "kev-dev",
   "license": "ISC",
   "keywords": [],
   "dependencies": {
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "compression": "^1.8.1",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "ioredis": "^5.8.1",
