--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "ioredis": "^5.8.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "soap": "^1.6.1"
   }
 }
